# Thyme

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.de-DE.md  README.md  appveyor.yml  codecov.yml
bench/: CMakeLists.txt  bench_gamemath_cm.cpp  bench_gamemath_gm.cpp  bench_refpack.cpp
src/: CMakeLists.txt
src/base/: always.h  bittype.h  compiler.h  config.h  config.h.in  endiantype.h  gitverinfo.cpp.in  gitverinfo.h  intrinsics.h  macros.h  platform.h  stringex.c  stringex.h  targetver.h  utf.h
src/dbg/: profiler.h
src/editor/: editmain.cpp  editmain.h
src/game/: copyprotect.cpp  copyprotect.h  crashhandler.cpp  crashhandler.h  crashwrapper.cpp  crashwrapper.h  force_nocd.cpp  force_nocd.h  main.cpp  main.h  maputil.cpp  maputil.h  rtsutils.h  stringex.h  weather.cpp  weather.h  win32compat.c
src/game/client/: anim2d.cpp  anim2d.h  baseheightmap.cpp  baseheightmap.h  camerashakesystem.cpp  camerashakesystem.h  challengegenerals.h  color.cpp  color.h  crashpreferences.cpp  crashpreferences.h  credits.cpp  credits.h  display.cpp  display.h  displaystring.cpp  displaystring.h  displaystringmanager.cpp  displaystringmanager.h  drawable.cpp  drawable.h  drawgroupinfo.cpp  drawgroupinfo.h  eva.cpp  eva.h  flatheightmap.cpp  flatheightmap.h  fxlist.cpp  fxlist.h  gameclient.cpp  gameclient.h  gametext.cpp  gametext.h  gametext_impl.h  gametextcommon.cpp  gametextcommon.h  gametextfile.cpp  gametextfile.h  gametextinterface.cpp  gametextinterface.h  (+44 more)
src/game/common/: array.h  bezfwditerator.cpp  bezfwditerator.h  beziersegment.cpp  beziersegment.h  bitflags.cpp  bitflags.h  chat.cpp  chat.h  color.h  commandline.cpp  commandline.h  commandlist.cpp  commandlist.h  coord.h  crc.cpp  crc.h  damagefx.cpp  damagefx.h  dict.cpp  dict.h  gameengine.cpp  gameengine.h  gamelod.cpp  gamelod.h  gamemain.cpp  gamemain.h  gamemessage.cpp  gamemessage.h  gamemessagelist.cpp  gamemessagelist.h  globaldata.cpp  globaldata.h  latchrestore.h  mapobject.cpp  mapobject.h  messagestream.cpp  messagestream.h  multiplayersettings.cpp  multiplayersettings.h  (+25 more)
src/game/network/: buddythread.h  filetransfer.cpp  filetransfer.h  framemetrics.cpp  framemetrics.h  gameinfo.cpp  gameinfo.h  gamemessageparser.cpp  gamemessageparser.h  ipenumeration.cpp  ipenumeration.h  lanapi.cpp  lanapi.h  lanapiinterface.cpp  lanapiinterface.h  langameinfo.h  network.cpp  network.h  networkutil.cpp  networkutil.h  peerdefs.cpp  peerdefs.h  stagingroomgameinfo.cpp  threadutils.cpp  threadutils.h  transport.cpp  transport.h  udp.cpp  udp.h
src/hooker/: dllmain.cpp  hookcrt.h  hooker.cpp  hooker.h  mapview.cpp  mapview.h  setupglobals.cpp  setupglobals_wb.cpp  setupglobals_zh.cpp  setuphooks.cpp  setuphooks.h  setuphooks_wb.cpp  setuphooks_zh.cpp
src/hookproxy/: CMakeLists.txt  hooker.cpp  hooker.h  mapview.cpp  proxydll.cpp  sha1.cpp  sha1.h
src/libs/bink/: CMakeLists.txt  bink.c  bink.h
src/libs/miles/: CMakeLists.txt  miles.c  miles.h
src/libs/olddx/: d3d8.h  d3d8caps.h  d3d8types.h
src/libs/stlport/: bitset  cassert  cerrno  cmath  cstdio  cstdlib  ctime  ctype.h  cwctype  deque  exception  fstream  hash_map  hash_set  ios  istream  iterator  limits  list  map  math.h  memory  new.h  numeric  pthread_alloc  queue  rope  set  slist  sstream  stack  stddef.h  stdexcept  strstream  typeinfo.h  utility  vector  wchar.h  wctype.h
src/platform/: fpusetting.cpp  fpusetting.h  sockets.h  standardfile.cpp  standardfile.h  stdlocalfilesystem.cpp  stdlocalfilesystem.h  utf.h  w3dfilesystem.cpp  w3dfilesystem.h  w3dfunctionlexicon.cpp  w3dfunctionlexicon.h  win32bigfile.cpp  win32bigfile.h  win32bigfilesystem.cpp  win32bigfilesystem.h  win32gameengine.cpp  win32gameengine.h  win32localfile.cpp  win32localfile.h  win32localfilesystem.cpp  win32localfilesystem.h
src/platform/audio/: alaudiomanager.cpp  alaudiomanager.h  alaudiostream.cpp  alaudiostream.h  audiofilecache.cpp  audiofilecache.h  ffmpegaudiofilecache.cpp  ffmpegaudiofilecache.h  milesaudiofilecache.cpp  milesaudiofilecache.h  milesaudiomanager.cpp  milesaudiomanager.h  playingaudio.h
src/platform/common/: ffmpegfile.cpp  ffmpegfile.h
src/platform/directx/: dinputkeybd.cpp  dinputkeybd.h
src/platform/input/: sdl2mouse.cpp  win32mouse.cpp  win32mouse.h
src/platform/sdl2/: sdl2gameengine.cpp  sdl2gameengine.h  sdl2keybd.cpp  sdl2keybd.h  sdl2mouse.cpp  sdl2mouse.h
src/platform/video/: binkvideoplayer.cpp  binkvideoplayer.h  binkvideostream.cpp  binkvideostream.h  ffmpegvideoplayer.cpp  ffmpegvideoplayer.h  ffmpegvideostream.cpp  ffmpegvideostream.h  swvideobuffer.cpp  swvideobuffer.h
src/tools/: CMakeLists.txt
src/tools/compressor/: CMakeLists.txt  compressor.cpp
src/tools/debugwindow/: CMakeLists.txt  dbgwinapp.cpp  dbgwinapp.h  dbgwinframe.cpp  dbgwinframe.h  debugwindow.cpp  debugwindow.h  debugwindow_posix.cpp  debugwindow_win32.cpp
src/tools/gametextcompiler/: CMakeLists.txt
src/tools/particleed/: CMakeLists.txt  coloralpha.cpp  coloralpha.h  dllmain.cpp  emissionpanels.cpp  emissionpanels.h  emitswitch.cpp  emitswitch.h  moreparams.cpp  moreparams.h  partedapp.cpp  partedapp.h  partedframe.cpp  partedframe.h  particleeditor.cpp  particleeditor.h  particleeditor_posix.cpp  particleeditor_win32.cpp  particlepanels.cpp  particlepanels.h  updatable.h  velocitypanels.cpp  velocitypanels.h
src/tools/w3dviewer/: CMakeLists.txt  addtolineupdialog.cpp  addtolineupdialog.h  ambientlightdialog.cpp  ambientlightdialog.h  animationproppage.cpp  animationproppage.h  animationspeed.cpp  animationspeed.h  assetinfo.cpp  assetinfo.h  assetpropertysheet.cpp  assetpropertysheet.h  assettypes.h  backgroundbmpdialog.cpp  backgroundbmpdialog.h  backgroundcolordialog.cpp  backgroundcolordialog.h  colorbar.cpp  (+87 more)
src/w3d/: CMakeLists.txt  w3dmpo.h
tests/: CMakeLists.txt  globals.cpp  main.cpp  test_audiofilecache.cpp  test_audiomanager.cpp  test_compr.cpp  test_crc.cpp  test_filesystem.cpp  test_text.cpp  test_videoplayer.cpp  test_w3d_load.cpp  test_w3d_math.cpp
(+1229 files in other folders)
